fixed item slider spacing at top

--- a/app/Cow/Customize/styles.module.css
+++ b/app/Cow/Customize/styles.module.css
@@ -101,3 +101,7 @@
     position: relative;
     z-index: 1;
 }
+
+.DressupSlider {
+    margin-top: -30px;
+}
